# lightgbm-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  lint.yml  test.yml
examples/: Cargo.toml
examples/binary_classification/: Cargo.toml
examples/binary_classification/src/: main.rs
examples/multiclass_classification/: Cargo.toml
examples/multiclass_classification/src/: main.rs
examples/regression/: Cargo.toml
examples/regression/src/: main.rs
examples/src/: main.rs
lightgbm-sys/: Cargo.toml  README.md  build.rs  wrapper.h
lightgbm-sys/src/: lib.rs
src/: booster.rs  dataset.rs  error.rs  lib.rs
test/: test_from_file.input
