[package]
name = "lightgbm"
version = "0.1.0"
authors = ["vaaaaanquish <6syun9@gmail.com>"]
license = "MIT"
repository = "https://github.com/vaaaaanquish/LightGBM"
description = "Machine learning using LightGBM"
readme = "README.md"

[dependencies]
lightgbm-sys = { path = "lightgbm-sys" }
libc = "0.2.81"
