[package]
name = "lightgbm"
version = "0.1.1"
authors = ["vaaaaanquish <6syun9@gmail.com>"]
license = "MIT"
repository = "https://github.com/vaaaaanquish/LightGBM"
description = "Machine learning using LightGBM"
readme = "README.md"
exclude = [".gitignore", ".gitmodules", "examples", "lightgbm-sys"]

[dependencies]
lightgbm-sys = "0.1.0"
libc = "0.2.81"
derive_builder = "0.5.1"
serde_json = "1.0.59"
