[package]
name = "lightgbm"
version = "0.2.5"
authors = ["vaaaaanquish <6syun9@gmail.com>"]
license = "MIT"
repository = "https://github.com/vaaaaanquish/LightGBM"
description = "Machine learning using LightGBM"
readme = "README.md"
exclude = [".gitignore", ".gitmodules", "examples", "lightgbm-sys"]

[dependencies]
lightgbm-sys = { path = "lightgbm-sys", version = "0.3.1" }
libc = "0.2.81"
derive_builder = "0.12"
serde_json = "1"
polars = {version = "0.33", optional = true}


[features]
default = []
dataframe = ["polars"]
